# snowsar

./: .gitignore  HyP3_SNOTEL.ipynb  MintPy_SNOTEL.ipynb  NISAR_SNOTEL.ipynb  README.md  environment.yml  pyproject.toml
ALOS2_end_to_end/: ALOS2_Emre.ipynb  alos2_topo_wbd.py  get_alos_localIncAng.py  make_ALOSstack_xml.py  unpack_alos2.py
LIDAR_notebooks/: LIDAR_vs_MintPy.ipynb  resample_LIDAR_to_MintPy.ipynb
SNOTEL_notebooks/: InSAR_SWE_vs_SNOTEL.ipynb  SNOTEL_SWE_Plots.ipynb  snotel_P071_F444.pkl
notebooks/: HyP3_SNOTEL.ipynb  InSAR_SWEvsSNOTEL.ipynb  MintPy_SNOTEL.ipynb  NISAR_SNOTEL.ipynb  NISAR_extract.ipynb  SNOTEL_SWE_Plots.ipynb
snowsar/utils/: __init__.py  geometry.py  hyp3_utils.py  insar_context.py  io_utils.py  lidar_utils.py  mintpy_utils.py  nisar_utils.py  plotting.py  snotel_utils.py
utils/: __init__.py  geometry.py  hyp3_utils.py  insar_context.py  mintpy_utils.py  nisar_utils.py  plotting.py  snotel_utils.py
